[package]
name = "bevy-gym"
version = "0.2.0"
edition = "2021"
description = "Bevy ECS plugin for parallelised RL environment simulation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidarrio/bevy-gym"
keywords = ["bevy", "gym", "ecs", "simulation", "rl"]
categories = ["game-engines", "science"]

[features]
default = []
# Enable Bevy rendering support. Without this, bevy-gym is fully headless.
render = [
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_winit",
    "bevy/bevy_asset",
    "bevy/bevy_sprite",
]

[dependencies]
rl-traits = "0.2"
rand = "0.8"

# Minimal Bevy — only what's needed for ECS + scheduling.
# The `render` feature adds windowing and rendering on top.
[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "default_app",
    "multi_threaded",
]

[dev-dependencies]
ember-rl = { version = "0.2", features = ["envs"] }
burn = { version = "0.20.1", features = ["ndarray", "autodiff"] }
